--- a/_includes/_includes/header.html
+++ b/_includes/_includes/header.html
@@ -6,16 +6,17 @@
     {{ page.description | default: site.description | default: site.github.project_tagline }}
   </h2>
 
-  <!-- 🔑 Tasto Home -->
-  <nav class="site-nav">
-    <a href="{{ '/' | relative_url }}" class="btn">🏠 Home</a>
+  <!-- Navigazione principale -->
+  <nav class="site-nav" aria-label="Main navigation">
+    <ul>
+      <li><a href="{{ '/' | relative_url }}" class="btn">🏠 Home</a></li>
+      {% if site.github.is_project_page %}
+        <li><a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a></li>
+      {% endif %}
+      {% if site.show_downloads %}
+        <li><a href="{{ site.github.zip_url }}" class="btn">Download .zip</a></li>
+        <li><a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a></li>
+      {% endif %}
+    </ul>
   </nav>
-
-  {% if site.github.is_project_page %}
-    <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
-  {% endif %}
-  {% if site.show_downloads %}
-    <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
-    <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
-  {% endif %}
 </header>
