--- a/_includes/_includes/header.html
+++ b/_includes/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="page-header" role="banner">
   <h1 class="project-name">
-    <a href="{{ '/' | relative_url }}" class="site-title">
+    <a href="https://trovatella.github.io/-Memorie-dal-Villaggio-MSN/" class="site-title">
       Memorie‑dal‑Villaggio‑MSN
     </a>
   </h1>
@@ -10,7 +10,9 @@
 
   <nav class="site-nav" aria-label="Main navigation">
     <ul>
-      <li><a href="{{ '/' | relative_url }}" class="btn">🏠 Home</a></li>
+      <!-- Bottone Home con link assoluto -->
+      <li><a href="https://trovatella.github.io/-Memorie-dal-Villaggio-MSN/" class="btn">🏠 Home</a></li>
+
       {% if site.github.is_project_page %}
         <li><a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a></li>
       {% endif %}
