--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,10 @@
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
     <meta charset="UTF-8">
+
+    <!-- Verifica Bing Webmaster Tools -->
+    <meta name="msvalidate.01" content="F46BAA8065B9680D7CFF00902310E6E6" />
+
     {% seo %}
 
     <!-- Performance & Fonts -->
