--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,9 @@
     <meta property="og:image" content="{{ site.url }}/cover.jpg">
     <meta name="twitter:card" content="summary_large_image">
 
+    <!-- RSS/Atom Feed -->
+    <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ site.baseurl }}/feed.xml">
+
     {% include head-custom.html %}
   </head>
   <body>
