--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
     <meta name="twitter:card" content="summary_large_image">
 
     <!-- RSS/Atom Feed -->
-    <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ site.baseurl }}/feed.xml">
+    <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ site.url }}{{ site.baseurl }}/feed.xml">
 
     {% include head-custom.html %}
   </head>
@@ -44,6 +44,8 @@
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
       {% endif %}
+      <!-- Bottone RSS -->
+      <a href="{{ site.url }}{{ site.baseurl }}/feed.xml" class="btn">🐧 RSS Feed</a>
     </header>
 
     <main id="content" class="main-content" role="main">
@@ -68,4 +70,4 @@
       </footer>
     </main>
   </body>
-</html>
+</html>         
