--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,9 +9,13 @@
     <!-- SEO tags -->
     {% seo %}
 
+    <!-- Canonical -->
+    <link rel="canonical" href="https://trovatella.github.io/-Memorie-dal-Villaggio-MSN/" />
+
     <!-- Performance & Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preload" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" as="style" type="text/css" crossorigin>
+    <link rel="preload" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" 
+          as="style" type="text/css" crossorigin>
 
     <!-- Responsive & Theme -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
