--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
-  <head>
+  <head> 
+    <meta name="google-site-verification" content="googlef12528ae06211b43" />
     <meta charset="UTF-8">
 
     <!-- Bing Webmaster Verification -->
