--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,11 @@
 
     <!-- Canonical -->
     <link rel="canonical" href="https://trovatella.github.io/-Memorie-dal-Villaggio-MSN/" />
+    <link rel="alternate" hreflang="it" href="https://trovatella.github.io/-Memorie-dal-Villaggio-MSN/" />
+<link rel="alternate" hreflang="fr" href="https://trovatella.github.io/-Memorie-dal-Villaggio-MSN/" />
+<link rel="alternate" hreflang="de" href="https://trovatella.github.io/-Memorie-dal-Villaggio-MSN/" />
+<link rel="alternate" hreflang="tr" href="https://trovatella.github.io/-Memorie-dal-Villaggio-MSN/" />
+<link rel="alternate" hreflang="en" href="https://trovatella.github.io/-Memorie-dal-Villaggio-MSN/" />
 
     <!-- Performance & Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
