--- a/_includes/_includes/header.html
+++ b/_includes/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="page-header" role="banner">
+<header class="page-header">
   <h1 class="project-name">
     <a href="https://trovatella.github.io/-Memorie-dal-Villaggio-MSN/" class="site-title">
       Memorie‑dal‑Villaggio‑MSN
