--- a/_includes/_includes/footer.html
+++ b/_includes/_includes/footer.html
@@ -1,4 +1,4 @@
 <footer class="site-footer">
-  <p>Sito creato con GitHub Pages<br>
-  e accompagnato da Microsoft Copilot ✨</p>
+  <p>Sito creato con <strong>GitHub Pages</strong></p>
+  <p>e accompagnato da <strong>Microsoft Copilot ✨</strong></p>
 </footer>
